--- a/.gitignore
+++ b/.gitignore
@@ -133,8 +133,13 @@ cython_debug/
 .DS_Store
 
 # Local data
-notebooks/data/*
-!notebooks/data/.gitkeep
+notebooks/*
+!/notebooks/.gitkeep
+!/notebooks/data/.gitkeep
 
+data/*
+!data/.gitkeep
 
 .vscode/
+
+src/dash/app_test.py
