--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
 [tool.poetry]
-name = "rag-based-solar-inverter"
+name = "retriever-for-video-transcripts"
 version = "0.0.1"
 description = "This repo is an example of a RAG buit on solar inverter technical data sheets."
 authors = ["Nicolas Favrot <n.favrot@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "rag_based_solar_inverter", from = "src" }]
-
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-ipykernel = "^6.29.4"
-pandas = "^2.2.1"
-python-dotenv = "^1.0.1"
-pyyaml = "^6.0.1"
+
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
